# opengl-playground

./: .gitignore  CMakeLists.txt  Lines.h  Makefile  Particles.h  camera.h  checkShader.cc  gl_helper.h  glapp.py  glshader_helper.h  imgui-app-demo.cc  imgui.ini  joystick.h  main.cc  mesh.h  particles-demo.cc  phong.cc  primitives-demo.cc  shader.frag  shader.h  shader.vert  shaderChecker.cc  shadertoy.cc  shadertoy.py  simple.h  st.py  teapot.raw
GLObject/: Shader.h
gl3w/: CMakeLists.txt
imgui-app/: CMakeLists.txt  ImGuiApp.cpp  ImGuiApp.h  VideoWriter.cc
old/: .gitignore  CMakeLists.txt  CMakeSettings.json  MetaData.h  camera.h  checkShader.cc  gl_helper.h  main.cc  shadertoy.cc  simple-demo.cc
old/data/: ball.raw  mesh.raw
old/imgui-app/: CMakeLists.txt  VideoWriter.cc
old/old/: CMakeLists.txt  main.cc  shadertoy.cc
old/old/GLObject/: VertexArray.h
old/old/gl3w/GL/: glcorearb.h
old/old/shader/: smooth.frag
old/shader/: texture.vert
old/shadertoy/: lightsdf.glsl  raymarch.glsl  sdftest.glsl  trace.glsl
old/utils/: GLFWUtil.h
shader/: marble.frag  phong.frag  phong.vert  smooth.frag  smooth.vert  texture.frag  texture.vert
shadertoy/: WoS.glsl  droplet.glsl  metaball.glsl  sdftest.glsl  umbrella.glsl
utils/: BaseObject.h  Buffer.h  Camera.h  GLFWUtil.h  Mesh.h  Shader.h  Texture.h  VertexArray.h  mesh.h  shader.h
